# ChavezNet

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  rapidcsv.h
include/: Arbol.h  Cliente.h  ClienteConcreteFactory.h  ClienteFactory.h  Database.h  DatabaseSingleton.h  DecoradorPelicula.h  Funciones.h  IStrategyBusqueda.h  Nodo.h  Observer.h  Pelicula.h  PeliculaCalificadaDecorator.h  PeliculaComponent.h  PeliculaConCoincidencias.h  PeliculaDecorator.h  PeliculaFactory.h  PeliculaVistaDecorator.h
mongo-api/: .env  package-lock.json  package.json  server.js
src/: Arbol.cpp  Cliente.cpp  ClienteConcreteFactory.cpp  ClienteFactory.cpp  Database.cpp  Funciones.cpp  Nodo.cpp  Pelicula.cpp  PeliculaConCoincidencias.cpp
